k8s/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tls-redirect
  namespace: alcanzapoesia
spec:
  redirectScheme:
    scheme: https
    permanent: true
