k8s/routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alcanza-http
  namespace: alcanzapoesia
  labels:
    project: alcanzapoesia
spec:
